posiGen_FullsendBox/src/objects/Box_User__c.object
<CustomObject>
    <fields>
        <fullName>BoxUser_Email__c</fullName>
        <label>BoxUser Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BoxUser_Id__c</fullName>
        <label>BoxUser Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BoxUser_Name__c</fullName>
        <label>BoxUser Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BoxUser_Status__c</fullName>
        <label>BoxUser Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_User_Id__c</fullName>
        <label>SF User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Box User</label>
    <nameField>
        <label>Box User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Box Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>